force-app/main/default/objects/Case/fields/CPL_Joins__c.field-meta.xml
<CustomField>
    <fullName>CPL_Joins__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPL Joins</label>
    <referenceTo>CPL_Joins__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>