force-app/main/default/objects/Case/fields/Created_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Id__c</fullName>
    <label>Created By Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>