force-app/main/default/objects/Case/fields/isCPLJoin__c.field-meta.xml
<CustomField>
    <fullName>isCPLJoin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCPLJoin</label>
    <type>Checkbox</type>
</CustomField>