force-app/main/default/objects/Case/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <description>It contains values for Case Sub Type</description>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Headsets</fullName>
            </value>
            <value>
                <fullName>Mouse/Key Board/Monitors</fullName>
            </value>
            <value>
                <fullName>Printers</fullName>
            </value>
            <value>
                <fullName>Bright pattern</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Clearview</fullName>
            </value>
            <value>
                <fullName>DNC</fullName>
            </value>
            <value>
                <fullName>Driver Issues</fullName>
            </value>
            <value>
                <fullName>Data Issues</fullName>
            </value>
            <value>
                <fullName>Media - Routes to Travis</fullName>
            </value>
            <value>
                <fullName>Police Officers/Public Relations</fullName>
            </value>
            <value>
                <fullName>Pen</fullName>
            </value>
            <value>
                <fullName>Notepad</fullName>
            </value>
            <value>
                <fullName>New Art work</fullName>
            </value>
            <value>
                <fullName>Proofs</fullName>
            </value>
            <value>
                <fullName>Request for docusign</fullName>
            </value>
            <value>
                <fullName>Red Line Agreement</fullName>
            </value>
            <value>
                <fullName>Status Update</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Surveys</fullName>
            </value>
            <value>
                <fullName>Telemarketing/Lead Qual</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Changes to Art Work</fullName>
            </value>
            <value>
                <fullName>Hot Leads</fullName>
            </value>
            <value>
                <fullName>Client Products/Services</fullName>
            </value>
            <value>
                <fullName>Consumer Attorney complaint</fullName>
            </value>
            <value>
                <fullName>Inbound Telephone Call</fullName>
            </value>
            <value>
                <fullName>Email Creation</fullName>
            </value>
            <value>
                <fullName>Salesforce Activation</fullName>
            </value>
            <value>
                <fullName>Email Deactivation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>