force-app/main/default/objects/Case/recordTypes/Building_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Building_Maintenance</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <description>Plumbing, Electrical, HVAC, Appliances</description>
    <label>Building Maintenance</label>
</RecordType>