force-app/main/default/objects/Case/recordTypes/Call_Center.recordType-meta.xml
<RecordType>
    <fullName>Call_Center</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <description>Compliance, Supplies, Payroll, Hardware</description>
    <label>Call Center</label>
</RecordType>