force-app/main/default/objects/Case/recordTypes/Client_Services.recordType-meta.xml
<RecordType>
    <fullName>Client_Services</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <description>Client Request, Portal, Artwork, Telemarketing, Billing</description>
    <label>Client Services</label>
</RecordType>