force-app/main/default/objects/Case/recordTypes/Finance.recordType-meta.xml
<RecordType>
    <fullName>Finance</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <description>Payroll, Expenses, Accounts Payable, Charge Backs</description>
    <label>Finance</label>
</RecordType>