force-app/main/default/objects/Case/recordTypes/Fulfillment.recordType-meta.xml
<RecordType>
    <fullName>Fulfillment</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <description>Redeliver Cups, Request to move furniture</description>
    <label>Fulfillment</label>
</RecordType>