force-app/main/default/objects/Case/recordTypes/HR.recordType-meta.xml
<RecordType>
    <fullName>HR</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <description>New Employee, Employee Termination, or Transfers</description>
    <label>HR</label>
</RecordType>