force-app/main/default/objects/Case/recordTypes/Inside_Outside_Sales.recordType-meta.xml
<RecordType>
    <fullName>Inside_Outside_Sales</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <description>Portal, Docusing, Salesforce1, Reporting &amp; Dashboards</description>
    <label>Inside &amp; Outside Sales</label>
</RecordType>