force-app/main/default/objects/Case/recordTypes/IT.recordType-meta.xml
<RecordType>
    <fullName>IT</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <description>Hardware, Software, Salesforce, zDrive, AWS</description>
    <label>IT</label>
</RecordType>