force-app/main/default/objects/Case/recordTypes/Legal_Compliance.recordType-meta.xml
<RecordType>
    <fullName>Legal_Compliance</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <description>DNC Issues, Irate Consumer, Attorney General</description>
    <label>Legal &amp; Compliance</label>
</RecordType>