force-app/main/default/objects/Case/recordTypes/Metro_Deliveries.recordType-meta.xml
<RecordType>
    <fullName>Metro_Deliveries</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <description>Wrong Address, Bad Area for Delivery</description>
    <label>Metro Deliveries</label>
</RecordType>