force-app/main/default/objects/Case/recordTypes/Sales_Admin.recordType-meta.xml
<RecordType>
    <fullName>Sales_Admin</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <description>Art work, Docusign</description>
    <label>Sales Admin</label>
</RecordType>