force-app/main/default/objects/Case/listViews/Attorney_General_or_Consumer_Attorney_co_Case.listView-meta.xml
<ListView>
    <fullName>Attorney_General_or_Consumer_Attorney_co_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Attorney General or Consumer Attorney co</label>
    <queue>Attorney_General_or_Consumer_Attorney_co</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>