force-app/main/default/objects/Case/listViews/AWS_Case.listView-meta.xml
<ListView>
    <fullName>AWS_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>AWS</label>
    <queue>AWS</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>