force-app/main/default/objects/Case/listViews/Building_Maintenance_Case.listView-meta.xml
<ListView>
    <fullName>Building_Maintenance_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Building Maintenance</label>
    <queue>Building_Maintenance</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>