force-app/main/default/objects/Case/listViews/Call_Center_Case.listView-meta.xml
<ListView>
    <fullName>Call_Center_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Call Center</label>
    <queue>Call_Center</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>