force-app/main/default/objects/Case/listViews/Call_Centers_Case.listView-meta.xml
<ListView>
    <fullName>Call_Centers_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Call Centers</label>
    <queue>Call_Centers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>