force-app/main/default/objects/Case/listViews/Call_Centers_SLA_6_Case.listView-meta.xml
<ListView>
    <fullName>Call_Centers_SLA_6_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Call Centers_SLA_6</label>
    <queue>Call_Centers_SLA_6</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>