force-app/main/default/objects/Case/listViews/Cheetah_Case.listView-meta.xml
<ListView>
    <fullName>Cheetah_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Cheetah</label>
    <queue>Cheetah</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>