force-app/main/default/objects/Case/listViews/Client_Services_SLA_24_Case.listView-meta.xml
<ListView>
    <fullName>Client_Services_SLA_24_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Client Services_SLA_24</label>
    <queue>Client_Services_SLA_24</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>