force-app/main/default/objects/Case/listViews/Consumer_Request_for_DNC_Policy_Case.listView-meta.xml
<ListView>
    <fullName>Consumer_Request_for_DNC_Policy_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Consumer Request for DNC Policy</label>
    <queue>Consumer_Request_for_DNC_Policy</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>