force-app/main/default/objects/Case/listViews/CSS_Client_Services_Case.listView-meta.xml
<ListView>
    <fullName>CSS_Client_Services_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CSS – Client Services</label>
    <queue>CSS_Client_Services</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>