force-app/main/default/objects/Case/listViews/DNC_Issues_All_Sources_Case.listView-meta.xml
<ListView>
    <fullName>DNC_Issues_All_Sources_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>DNC Issues – All Sources</label>
    <queue>DNC_Issues_All_Sources</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>