force-app/main/default/objects/Case/listViews/Employee_Email_Case.listView-meta.xml
<ListView>
    <fullName>Employee_Email_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Employee Email</label>
    <queue>Employee_Email</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>