force-app/main/default/objects/Case/listViews/Employee_Salesforce_Case.listView-meta.xml
<ListView>
    <fullName>Employee_Salesforce_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Employee Salesforce</label>
    <queue>Employee_Salesforce</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>