force-app/main/default/objects/Case/listViews/Employee_User_Account_Case.listView-meta.xml
<ListView>
    <fullName>Employee_User_Account_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Employee User Account</label>
    <queue>Employee_User_Account</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>