force-app/main/default/objects/Case/listViews/Employee_User_Accounts_SLA_48_Case.listView-meta.xml
<ListView>
    <fullName>Employee_User_Accounts_SLA_48_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Employee User Accounts_SLA_48</label>
    <queue>Employee_User_Accounts_SLA_48</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>